# edusat

./: .gitignore  CMakeLists.txt  edusat.cpp  readme.txt
data/downloaded/: urqh3x3.shuffled-as.sat03-1476.cnf
data/easy_cnf_instances/: aim-100-1_6-no-2.cnf  aim-100-1_6-no-3.cnf  aim-100-1_6-no-4.cnf  aim-100-1_6-yes1-1.cnf  aim-100-1_6-yes1-2.cnf  aim-100-1_6-yes1-3.cnf  aim-100-1_6-yes1-4.cnf  aim-100-2_0-no-1.cnf  aim-100-2_0-no-2.cnf  aim-100-2_0-no-3.cnf  aim-100-2_0-no-4.cnf  aim-100-2_0-yes1-1.cnf  aim-100-2_0-yes1-2.cnf  aim-100-2_0-yes1-3.cnf  aim-100-2_0-yes1-4.cnf  aim-100-3_4-yes1-1.cnf  aim-100-3_4-yes1-2.cnf  aim-100-3_4-yes1-3.cnf  aim-100-3_4-yes1-4.cnf  aim-100-6_0-yes1-1.cnf  aim-100-6_0-yes1-2.cnf  aim-100-6_0-yes1-3.cnf  aim-100-6_0-yes1-4.cnf  aim-200-1_6-no-1.cnf  aim-200-1_6-no-2.cnf  aim-200-1_6-no-3.cnf  aim-200-1_6-no-4.cnf  aim-200-1_6-yes1-1.cnf  aim-200-1_6-yes1-2.cnf  aim-200-1_6-yes1-3.cnf  aim-200-1_6-yes1-4.cnf  aim-200-2_0-no-1.cnf  aim-200-2_0-no-2.cnf  aim-200-2_0-no-3.cnf  aim-200-2_0-no-4.cnf  aim-200-2_0-yes1-1.cnf  aim-200-2_0-yes1-2.cnf  aim-200-2_0-yes1-3.cnf  aim-200-2_0-yes1-4.cnf  aim-200-3_4-yes1-1.cnf  (+27 more)
scripts/: download_results.ps1  results.ipynb  run_batch.ps1
scripts/.ipynb_checkpoints/: results-checkpoint.ipynb
src/: edusat.cpp  main.cpp
src/callbacks/: CallbackBase.h  HandleUnaryClausesCallback.h  LocalRestart.h  PrintStateCallback.h  RunStatisticsCallback.h  TimeoutCallback.cpp  TimeoutCallback.h
src/heuristics/: LR.cpp  LR.h  val.cpp  val.h  var.cpp  var.h
src/old/: edusat.cpp  edusat.h  options.cpp  options.h
src/parsing/: dimacs_parser.cpp  dimacs_parser.h
src/solver/: SatSolverException.h  clause.cpp  clause.h  exceptions.h  solver.cpp  solver.h  solver_state.cpp  solver_state.h  solver_state_analyzer.cpp
src/utils/: definitions.h  options.cpp  options.h  utils.cpp  utils.h
